Don't close tray bubble when notification popup is deactivated.

When the settings button in a notification popup is clicked, the notification
is activated and hidden almost at the same time.
In such case, the notification is deactivated without OnWindowActivated for
the activation being called.

We have to manually ignore such case in TrayBubbleWrapper::OnWindowActivated.

TEST=manual
BUG=778973

Change-Id: I90802a99a64bd8a9d8de56e48735e0fd7abe6ed6
Reviewed-on: https://chromium-review.googlesource.com/740928
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512639}
Former-commit-id: 76cc1e35b6c08b6597b3cb18ca49460a9f5e42e4